wrap tables in divs to avoid style change

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -731,7 +731,7 @@ a.help-icon {
     background: #fcf8e3 !important;
 }
 
-.side-to-side table {
+.side-to-side > div {
     display: inline-block;
     vertical-align: top;
 }
